2015-07-25  Araki Ken  <arakiken@users.sf.net>

	* x_window_cairo.c: If a character code is not found in FC_CHARSET,
	  another font which contains it is searched and used automatically.

	* x_font_ft.c: FC_CHARSET is set to cairo_scaled_font_t as a user data.

	* im_wnn.c: Illegal memory access by pressing 'A' - 'Z' is fixed.

2015-06-13  Araki Ken  <arakiken@users.sf.net>

	* im_wnn.c:
	  - https://gist.github.com/tsutsui/1d4f9af3b4a53c906eb4 is merged.
	  - Small "tsu" is available.

2015-06-07  Araki Ken  <arakiken@users.sf.net>

	* Makefile.in: 'make install-fb' error is fixed.

	* version.h.in: 3.5.0 -> 3.5.0post

2015-06-07  Araki Ken  <arakiken@users.sf.net>

	* 3.5.0 released.
	  (tag "rel-3_5_0")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.5.0.

2015-06-06  Araki Ken  <arakiken@users.sf.net>

	* fb/x_window.c: x_window_move() doesn't redraw screen if the area of
	  child windows fills less than 90% of a parent window.

	* fb/x_display.c: expose_window(all child winodws) in expose_display().

	* x_im_{candidate|status}_screen.c: The change at 2015/05/06 is reverted.

2015-05-31  Araki Ken  <arakiken@users.sf.net>

	* x_layout.c:
	  - If x_layout_t has multiple x_screen_t windows which have a wall picture,
	    x_layout_t plunders it.
	  - total_min_size() -> total_hint_size().

	* x_screen.[ch]: x_screen_reload_color_cache() is added.

	* x_window.h, */x_window.c:
	  - do_expose is added to arguments of x_window_(un)set_wall_picture().
	  - If wall picture is set to a root window, ParentRelative is set to
	    its child windows.
	  - configure_root is added to x_window_t for xlib.

2015-05-26  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, etc/README.ja: Updated.

	* x_screen.[ch], x_shortcut.[ch], x_screen_manager.c:
	  - HEXPAND_SCREEN and VEXPAND_SCREEN are added to shortcut keys.
	  - NEXT_SCREEN, PREV_SCREEN, CLOSE_SCREEN, HEXPAND_SCREEN, VEXPAND_SCREEN